<resources>
    <string name="app_name">Sheaed Jobs</string>
    <string name="shared_jobs">Shared Jobs</string>
    <string name="preencha_os_dados">Preencha os dados</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="receber_notifica_es">Receber notificações?</string>
    <string name="contato">Contato</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="remover">Remover</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="forma_o">Formação</string>
    <string name="ano_formatura">Ano Formatura</string>
    <string name="ano_conclusao">Ano Conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="titulo_monografia">Título Monografia</string>
    <string name="nome_orientador">Nome Orientador</string>
    <string name="vagas_de_interesse">Vagas de Interesse</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>

    <string-array name="tipo_telefone">
        <item>Residencial</item>
        <item>Comercial</item>
    </string-array>

    <string-array name="tipo_formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>